Fix Advanced ID Tools page spacing on small screens.

--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -1624,10 +1624,9 @@ header.partner-site nav li a { padding: 5px 32px 0; /* fewer sections, more hori
   .content #sidebar .section { padding-bottom: 16px; }
   .gb-tooltip { width: 200px; }
   /* Advanced ID placeholder page: delete after tools release */
-  #advanced-id #main .dk-landing-section { height: auto; margin-top: 14px; width: auto; }
+  #advanced-id #main .dk-landing-section { height: auto; margin-top: 14px; padding: 0; width: auto; }
   #advanced-id #main .dk-landing-section > a { margin-left: 16px; position: static; }
-  #advanced-id #main .dk-landing-section:first-child { height: auto; margin-right: 0; margin-top: 0; width: auto; }
-  #advanced-id #main .landing-divider { display: none; }
+  #advanced-id #main .dk-landing-section:first-of-type { border-right: 0; height: auto; margin-right: 0; margin-top: 0; width: auto; }
   #advanced-id #main a.go-dichkey-btn { margin-bottom: 14px; } }
 /* These styles apply to smartphones and tablets */
 @media only screen and (max-width: 1024px) { /* Currently there are no global styles here in this category, but there are some elsewhere for various parts of the site. */ }
