--- a/gobotany/static/sass/_site-media-queries.scss
+++ b/gobotany/static/sass/_site-media-queries.scss
@@ -340,20 +340,19 @@ $search-suggest-menu-top: 83px;
         .dk-landing-section {
             height: auto;
             margin-top: 14px;
+            padding: 0;
             width: auto;
             > a {
                 margin-left: 16px;
                 position: static;
             }
-            &:first-child {
+            &:first-of-type {
+                border-right: 0;
                 height: auto;
                 margin-right: 0;
                 margin-top: 0;
                 width: auto;
             }
-        }
-        .landing-divider {
-            display: none;
         }
         a.go-dichkey-btn {
             margin-bottom: 14px;
